# SceneSynthFramework

./: $  .gitignore  CMakeLists.txt  CMakeLists.txt.BAC  README.md  SceneSynthFramework.sublime-project  SceneSynthFramework.sublime-workspace  blocksOnPlane.blend  distToPlane.blend  distToPlaneGround.blend  distToPlaneHeight.blend
Rscripts/: CDFbasedOnDistance.R  CDFbasedOnDistanceNormal.R
config/: dirFeatAverageOrHist.conf  impdistSamplesVsVertices.conf  impdistWeight.conf  raySampling.conf  smplAmOnIBS2000.conf  smplAmSens1000ImpDist.conf  smplAmSens1000Unif.conf  smplAmSens100ImpDist.conf  smplAmSens100Unif.conf  smplAmSens1024000ImpDist.conf  smplAmSens1024000Unif.conf  smplAmSens128000ImpDist.conf  smplAmSens128000Unif.conf  smplAmSens16000ImpDist.conf  smplAmSens16000Unif.conf  smplAmSens2000ImpDist.conf  smplAmSens2000Unif.conf  smplAmSens256000ImpDist.conf  smplAmSens256000Unif.conf  smplAmSens32000ImpDist.conf  smplAmSens32000Unif.conf  smplAmSens4000ImpDist.conf  smplAmSens4000Unif.conf  smplAmSens500ImpDist.conf  smplAmSens500Unif.conf  smplAmSens50ImpDist.conf  smplAmSens50Unif.conf  smplAmSens512000ImpDist.conf  smplAmSens512000Unif.conf  smplAmSens64000ImpDist.conf  smplAmSens64000Unif.conf  smplAmSens8000ImpDist.conf  smplAmSens8000Unif.conf  template.conf
include/input/: ConfigurationParser.h  ExperimentConfiguration.h  GAConfiguration.h  SynthesisConfiguration.h
newSrc/main/: main.cpp
newSrc/main/input/: ConfigurationParser.cpp  GAConfiguration.cpp
newSrc/test/input/: ConfigurationParserTest.cpp
runScripts/: allIBSSimExp  compSimSamples  compareSimilarities
src/: $  <  CMakeLists.txt  Face.cpp  Face.h  Input.cpp  Input.h  Makefile  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  SceneSynth.make  Vertex.cpp  Vertex.h  cgaltest.cpp  cmake_install.cmake  gmon.out  gprof.out  les  main.cpp  premake.lua  sceneSynth.exe.stackdump  test.cpp  types.h  writeOBJ.h  µ
src/AnalysisPhase/: Analysis.h  Constraint.h  IBS.cpp  IBS.h  IBSAnalysis.cpp  IBSAnalysis.h  IBSConstraint.h  IbsGenerator.cpp  IbsGenerator.h  OrientHelper.cpp  OrientHelper.h  Sampler.cpp  Sampler.h
src/Debug/: DebugTools.cpp  DebugTools.h  plotHist.gp
src/Display/: Display.cpp  Display.h  clean.blend  clean.blend1  clean.blend2  displayBlender.py  profile  write.cpp  write.h  writeOBJ.cpp  writeOBJ.h
src/Experiments/: Configuration.cpp  Configuration.h  ConfigurationController.cpp  ConfigurationController.h  ConfigurationFactory.cpp  ConfigurationFactory.h  ExpGAIBS.cpp  ExpGAIBS.h  ExpIBSPDF.cpp  ExpIBSPDF.h  ExpIBSSim.cpp  ExpIBSSim.h  ExpIDIBS.cpp  ExpIDIBS.h  Experiment.cpp  Experiment.h  Experiments.cpp  GA.cpp  GA.h  GAOptions.cpp  GAOptions.h  GATypes.h  IBSFitEval.cpp  IBSFitEval.h
src/Utilities/: Transformation.cpp  Transformation.h  Utilities.cpp  Utilities.h  split_range.hpp
